test_files/fails/t_adv_not_later.ar
let name = delay (adv 2);

console <- 1 :: never;